[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/boobyTrap.gd" type="Script" id=1]
[ext_resource path="res://sprites/boobyTraps/loading/loading4.png" type="Texture" id=2]
[ext_resource path="res://sprites/boobyTraps/loading/loading8.png" type="Texture" id=3]
[ext_resource path="res://sprites/boobyTraps/loading/loading3.png" type="Texture" id=4]
[ext_resource path="res://sprites/boobyTraps/loading/loading5.png" type="Texture" id=5]
[ext_resource path="res://sprites/boobyTraps/loading/loading9.png" type="Texture" id=6]
[ext_resource path="res://sprites/boobyTraps/loading/loading7.png" type="Texture" id=7]
[ext_resource path="res://sprites/boobyTraps/loading/loading1.png" type="Texture" id=8]
[ext_resource path="res://sprites/boobyTraps/loading/loading6.png" type="Texture" id=9]
[ext_resource path="res://sprites/boobyTraps/pillar/pillarBlock.png" type="Texture" id=10]
[ext_resource path="res://sprites/boobyTraps/loading/loading2.png" type="Texture" id=11]
[ext_resource path="res://sprites/boobyTraps/shoot/shootBlock.png" type="Texture" id=12]
[ext_resource path="res://sprites/boobyTraps/laser/laserBlock.png" type="Texture" id=13]
[ext_resource path="res://fonts/VDmx.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://sprites/boobyTraps/lavaTrap/lavaBlock2.png" type="Texture" id=15]
[ext_resource path="res://sprites/boobyTraps/lavaTrap/lavaBlock1.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "pillarTrap",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "laserTrap",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "shootTrap",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "lavaTrap",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 14 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 5 )

[node name="boobyTrap" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "lavaTrap"

[node name="loadingTimer" type="Timer" parent="."]
one_shot = true

[node name="letterBel" type="Label" parent="."]
margin_left = -4.0
margin_top = -9.0
margin_right = 36.0
margin_bottom = 17.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.756863, 0.898039, 0.917647, 1 )
text = "a"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadingSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6, 0 )
frames = SubResource( 3 )

[node name="collisionBox" type="StaticBody2D" parent="."]

[node name="collisionShape" type="CollisionShape2D" parent="collisionBox"]
shape = SubResource( 4 )

[node name="sound" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="loadingTimer" to="." method="_on_loadingTimer_timeout"]
